kubernetes/gateway.yml
# Helpful Links
# https://stackoverflow.com/questions/44760416/istio-ingress-with-grpc-and-http


# TODO: Setup custom ingress gateway to permentently support opening grpc port 
# - https://stackoverflow.com/questions/51835752/how-to-create-custom-istio-ingress-gateway-controller
# - https://istio.io/latest/blog/2019/custom-ingress-gateway/

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: default
  name: tensorbeat-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # - port:
  #     name: https-default
  #     number: 443
  #     protocol: HTTPS
  #   tls:
  #     credentialName: ingress-cert
  #     mode: SIMPLE
  #   hosts:
  #   - "*"
  - port:
      number: 50051
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
