kubernetes/dask-gateway-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: dask-gateway
  name: dask-gateway-service
spec:
  hosts:
    - "dask.tensorbeat.com"
  gateways:
    - default/tensorbeat-gateway
  http:
    - route:
        - destination:
            host: traefik-dask-gateway
            port:
              number: 80
