kubernetes/kiali-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: kiali-service
spec:
  hosts:
  - "kiali.tensorbeat.com"
  gateways:
  - default/tensorbeat-gateway
  http:
  - route:
    - destination:
        host: kiali
        port: 
          number: 20001
