kubernetes/prod-grpc-midi-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: tensorbeat
  name: tensorbeat-grpc-service
spec:
  hosts:
  - "grpc.tensorbeat.com"
  gateways:
  - default/tensorbeat-gateway
  http:
  - match:
    - uri:
        prefix: /tensorbeat.sarosh_gen.SaroshGenerator
      port: 50051
    route:
    - destination:
        host: midi-generator
        port: 
          number: 50051
