kubernetes/prod-grpc-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: tensorbeat
  name: tensorbeat-grpc-service
spec:
  hosts:
  - "grpc.tensorbeat.com"
  gateways:
  - default/tensorbeat-gateway
  http:
  - match:
    - uri:
        prefix: /tensorbeat.datalake.DatalakeService
      port: 50051
    - uri:
        prefix: /grpc.reflection
      port: 50051
    route:
    - destination:
        host: datalake
        port:
          number: 50051
  - match:
    - uri:
        prefix: /tensorbeat.sarosh_gen.SaroshGenerator
      port: 50051
    route:
      - destination:
          host: midi-generator
          port:
            number: 50051
