kubernetes/prod-grpc-web-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: tensorbeat
  name: tensorbeat-grpc-web-service
spec:
  hosts:
  - "grpc-web.tensorbeat.com"
  gateways:
  - default/tensorbeat-gateway
  http:
  - match:
    - uri:
        prefix: /tensorbeat.datalake.DatalakeService
    route:
    - destination:
        host: datalake
        port: 
          number: 50052
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
        - PUT
        - DELETE
      allowHeaders:
        - grpc-timeout
        - content-type
        - keep-alive
        - user-agent
        - cache-control
        - content-type
        - content-transfer-encoding
        - custom-header-1
        - x-accept-content-transfer-encoding
        - x-accept-response-streaming
        - x-user-agent
        - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
        - custom-header-1
        - grpc-status
        - grpc-message
      allowCredentials: true
  - match:
    - uri:
        prefix: /tensorbeat.sarosh_gen.SaroshGenerator
    route:
      - destination:
          host: midi-generator
          port:
            number: 50052
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
      allowHeaders:
        - grpc-timeout
        - content-type
        - keep-alive
        - user-agent
        - cache-control
        - content-type
        - content-transfer-encoding
        - custom-header-1
        - x-accept-content-transfer-encoding
        - x-accept-response-streaming
        - x-user-agent
        - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
        - custom-header-1
        - grpc-status
        - grpc-message
      allowCredentials: true
