kubernetes/redis-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: redis
  name: redis-service
spec:
  hosts:
  - "redis.tensorbeat.com"
  gateways:
  - default/tensorbeat-gateway
  tcp:
    - match:
      - port: 6379
      route:
      - destination:
          host: redis-master.redis.svc.cluster.local
          port:
            number: 6379
    - match:
      - port: 6380
      route:
      - destination:
          host: redis-slave.redis.svc.cluster.local
          port:
            number: 6379
