kubernetes/test-grpc-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: tensorbeat
  name: test-tensorbeat-grpc-service
spec:
  hosts:
  - "grpc.test.tensorbeat.com"
  gateways:
  - tensorbeat-gateway
  http:
  - match:
    - uri:
        prefix: /tensorbeat.datalake.DatalakeService
      port: 50051
    route:
    - destination:
        host: test-datalake
        port: 
          number: 50051
